--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
 	"type": "module",
+	"scripts": {
+		"start": "bun main.js"
+	},
 	"dependencies": {
 		"@octokit/core": "^6.1.3",
 		"dotenv": "^16.4.7"
